# ChangeLog for gnome-extra/evolution-data-server
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.301 2011/04/13 16:38:53 pacho Exp $

  13 Apr 2011; Pacho Ramos <pacho@gentoo.org>
  evolution-data-server-2.32.2-r1.ebuild:
  Newer x11-libs/gtk+ needed (bug #363405 by Uwe Breidenbach).

*evolution-data-server-2.32.2-r1 (12 Apr 2011)

  12 Apr 2011; Pacho Ramos <pacho@gentoo.org>
  +evolution-data-server-2.32.2-r1.ebuild:
  Apply upstream fixes and backports from master and 2.32 branch, force ssl
  usage as told by upstream in upstream bug #642984.

  10 Apr 2011; Gilles Dartiguelongue <eva@gentoo.org>
  -files/evolution-data-server-1.8.0-camel-rewind.patch,
  -files/evolution-data-server-2.28.0-gentoo_etc_services.patch,
  -files/evolution-data-server-2.30.2-revert-addressbook.patch,
  -evolution-data-server-2.30.3.ebuild,
  -files/evolution-data-server-2.32.1-no-kerberos.patch:
  Clean up old revision.

  23 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  evolution-data-server-2.30.3.ebuild:
  Actually fix the deps...

  23 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  -evolution-data-server-2.30.2.ebuild,
  -evolution-data-server-2.32.1-r1.ebuild:
  Fix slot-deps on gnome libs, remove old

  22 Mar 2011; Brent Baude <ranger@gentoo.org>
  evolution-data-server-2.32.2.ebuild:
  Marking evolution-data-server-2.32.2 ppc stable for bug 353436

  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  evolution-data-server-2.32.2.ebuild:
  ppc64 stable wrt #353436

  12 Mar 2011; Raúl Porcel <armin76@gentoo.org>
  evolution-data-server-2.32.2.ebuild:
  alpha/arm/ia64/sparc stable wrt #353436

  24 Feb 2011; Thomas Kahle <tomka@gentoo.org>
  evolution-data-server-2.32.2.ebuild:
  x86 stable per bug 353436

  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
  evolution-data-server-2.32.2.ebuild:
  Stable on amd64 wrt bug #353436
