@@ -5,16 +5,20 @@ AUX calentry.schema 3661 RMD160 68dfc3a8bbf08a1cf2713727c6617b2de613cb7c SHA1 06
 AUX e-d-s-camel-skip-failing-test.patch 660 RMD160 0907bb916a124d689f1880016eb8013971944016 SHA1 7ef6fd67bddbba16b3c6dd24a9b50ea9f8f5aa86 SHA256 f89f7635e9a5ddc2aa2f713a6d7eb9322f3416f8f9ad1cba1a113f65a1eaacb5
 AUX evolution-data-server-2.31-gentoo_etc_services.patch 1350 RMD160 a2fe65e31e3dad58fd5aef1e9bf7cdd02b540f8c SHA1 aef1a5fc05262c1049306c50a5c91ad9111f9b22 SHA256 1dae07ed5cb124c2da6e0d28f4e64555b6fb2bc012ceee3506f0af6e3e41102a
 AUX evolution-data-server-2.32.1-libgdata07.patch 7683 RMD160 d025f3a8a819f0d7fae5b679c598e90e04a0e3ba SHA1 7c9c1d3ba78afad5e5da59bf8d22657d8cfabaf2 SHA256 8d76763e249c3a0cfd250cc24f2fb773f74480a0f353a118f9bd87485d7fac5f
+AUX fix_relink_command.pl 4074 RMD160 517048bd503d3c0cd5a37db6fb50d37f67f66ac5 SHA1 efc9936fb8a0a67711c7e9949df87a6bb3fe0344 SHA256 f6da0e687f7e64eab82671def4b7445602d1bf64e9b56c3c188d43fadc7dabc2
 DIST evolution-data-server-2.32.2-patches.tar.bz2 7910 RMD160 cadba4cec671aed612e375176de82341da86652a SHA1 f3559c3265901daff7b998a6cd5bbf6c4f4d31ae SHA256 69a2e2a3cd2dcbe48b5db5af4b3958aea4324698cf3158da2f5cc098ec483535
 DIST evolution-data-server-2.32.2.tar.bz2 4290879 RMD160 a024d3032d12c3cfe31e2471218c7c6817e2168f SHA1 a8d1820d7b89fabed8dc44ad51eb90fc5a61e9da SHA256 d22fcd9e6f1cee7b4b11a25ae3c3d19e6a454e4f09b983a954ff2d7640bf1c36
+DIST evolution-data-server-2.32.3-patches.tar.xz 24072 RMD160 2508b5b101f59bb383020728a8abb9ee2eb7836d SHA1 76b86f747415c117c660ec70561a786ff772d2b2 SHA256 7b1f29fad87a7e868736380c69880a29ddf5d4bd365734df53042e4bc9e8b0fa
+DIST evolution-data-server-2.32.3.tar.bz2 4322281 RMD160 adc8b07aef41a89d16fc426541c12190a3688b8f SHA1 cbf32c3438c4f1650b35b87007a337ebc1c56cec SHA256 744026a745b711b3e393b61fed21c4926d1b10a3aa7da64f4b33a3e3bf5b085c
 EBUILD evolution-data-server-2.32.2-r1.ebuild 4155 RMD160 ca9745f76658accc08ed335e31d8d60b0f0dec1e SHA1 783e3fcb7274f26542030e7c53fa29afef424a5a SHA256 659a53b1e58432fac100aae0b83bbe335e212c5009f4589dac81b2278701189e
 EBUILD evolution-data-server-2.32.2.ebuild 3925 RMD160 40696eead31cd6967cee24757284322a03ad54dc SHA1 7982a446e8b556abf0d549a4de9a9faa1966c74b SHA256 1bbf97c42b44a2a47e7bf2d2271694ef1c9f8fe86375da418d73dafd02ec193c
-MISC ChangeLog 58026 RMD160 27b3e356885884444b5df29bdcf36569b7c821bd SHA1 2cedc920a4779fd43f2dad86b49fdcba50d2a79a SHA256 d61aa24cd24c22970defb7c034d4f74541a122a706954c9b0d389f65019e857c
+EBUILD evolution-data-server-2.32.3.ebuild 4502 RMD160 262f6faa999dbc937a81677673dc725db3896476 SHA1 a80d1d5b9340326f156de4c6f1019c5576ab1e4d SHA256 099b631abe1855705568d19b2ec4931427066e5a8ae73ce966eecf5a7cc3e891
+MISC ChangeLog 58273 RMD160 8786fd38fdecacd1953a50cbc7b31bb8e766e158 SHA1 75b58dc1606070f221e1586f8adde95565b928d7 SHA256 2cff3ac0821bb474bf4973db83d15647c7cbd30c1eb95168daa4e06046166964
 MISC metadata.xml 242 RMD160 930a0247c2ceed0dfad103c8e18493d54fa77382 SHA1 d332c62f5dff3da42709228dfcd0131d81a7048c SHA256 cea2d969f6f71bb465d787a64966e9bafd3706b2d2f8fe3b81cb85c409b74104
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2l0aQACgkQCaWpQKGI+9RL4ACePkxcnxSc8pzeNwI6G/hWwyUP
-H64AniXXuMKnQYtLf8kd8k15fdYVLCy/
-=oZlc
+iEYEARECAAYFAk3+awEACgkQCaWpQKGI+9SM8gCfXzBMWk33Mv9bkY1SsZsVSxSQ
+8BUAn20s5pTucjYgsan/ul8CfxPxm6cV
+=2khP
 -----END PGP SIGNATURE-----
