@@ -1,6 +1,13 @@
 # ChangeLog for gnome-extra/evolution-data-server
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.301 2011/04/13 16:38:53 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.302 2011/06/19 21:32:43 pacho Exp $
+
+*evolution-data-server-2.32.3 (19 Jun 2011)
+
+  19 Jun 2011; Pacho Ramos <pacho@gentoo.org>
+  +evolution-data-server-2.32.3.ebuild, +files/fix_relink_command.pl:
+  Version bump, also fix bug #349782 (linking problems) with tetromino's
+  solution.
 
   13 Apr 2011; Pacho Ramos <pacho@gentoo.org>
   evolution-data-server-2.32.2-r1.ebuild:
